--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@ nav img {
             <div class="row">
                 <div class ="about-col">
                     <h1>Meet Samara Nepomuceno</h1>
-                    <p>Hi, I'm CoffeeVerse's founder. Coffee to me means more than just drink; it's an experience, infused with taste, creativity, and cultural heritage. It's also my daily nudge to remember my mission: it stirs my senses, boosts my day, and accompanies me throughout my day. Beyond that, coffee builds bonds I value, as these people all have an affection for this dear drink. I started CoffeeVerse to bring it to you and to gather those who take pride in each cup. Here, there's ever something new to explore.</p>
+                    <p>Hi, I'm CoffeeVerse's founder. Coffee to me means more than just drink; it's an experience, infused with taste, creativity, and cultural heritage. It's also my daily nudge to remember my mission: it wakes me up and accompanies me throughout my day. Beyond that, coffee builds bonds I value, as these people are also coffee lovers like myself. I started CoffeeVerse to bring it to you and to gather those who take pride in each cup. Here, there's ever something new to explore.</p>
                </div>
                     <div class="about-col">
                     <img src="../CoffeeVere/img/mee.jpg" alt="Author photo">
