--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@ nav img {
 .footer h4 {
     margin-bottom: 15px;
     margin-top: 10px;
-    font-weight: 600px;
+    font-weight: 600;
 }
 
 .footer p{
@@ -131,7 +131,7 @@ nav img {
     <body>
         <section class="sub-header">
             <nav>
-                <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
+                <a href="index.html"><img src="../CoffeeVere/img/pls.png" alt="Logo photo"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
