--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="with=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>All You Need to Know About Coffee</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
-        <style>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <style>
 *{
     margin: 0;
     padding: 0;
@@ -165,7 +166,7 @@ nav img {
 .footer h4 {
     margin-bottom: 15px;
     margin-top: 10px;
-    font-weight: 600px;
+    font-weight: 600;
 }
 
 .footer p{
@@ -176,7 +177,7 @@ nav img {
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
+                <a href="index.html"><img src="../CoffeeVere/img/pls.png" alt="Logo photo"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
