--- a/index.html
+++ b/index.html
@@ -200,22 +200,21 @@ nav img {
             <h1>Classics</h1>
             <div class="roww">
                 <div class="preview-col">
-                    <img src="../CoffeeVere/img/la.jpg">
+                    <img src="../CoffeeVere/img/la.jpg" alt="latte photo">
                     <h3>Caffè Latte</h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
                 <div class="preview-col">
-                    <img src="../CoffeeVere/img/espresso.jpg">
+                    <img src="../CoffeeVere/img/espresso.jpg" alt="espresso photo">
                     <h3>Espresso</h3>
                     <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
                     <a href="recipes.html" class="hero-btn">Explore More</a>
                 </div>
                 <div class="preview-col">
-                    <img src="../CoffeeVere/img/mocha.jpg">
+                    <img src="../CoffeeVere/img/mocha.jpg" alt="mocha photo">
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
                 </div>
-            </div>
             </div>
         </section>
 
