--- a/personalfave.html
+++ b/personalfave.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="with=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>All You Need to Know About Coffee</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <style>
 *{
     margin: 0;
@@ -152,7 +152,7 @@ nav img {
     <body>
         <section class="sub-header">
             <nav>
-                <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
+                <a href="index.html"><img src="../CoffeeVere/img/pls.png" alt="Logo photo"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
@@ -173,11 +173,11 @@ nav img {
                 <div class ="r1-col">
                     <h1>How to make a homemade version of Starbucks Iced Caramel Macchiato</h1>
                     <p>Ingredients: <br> 2 tsp. vanilla syrup or to taste <br> 6 oz. milk <br> 6 oz steamed milk <br> 1 oz espresso <br> Caramel sauce to drizzle <br> Ice <br> Whipped cream (optional) </p> <br> 
-                    <p>Instructions: <br> Add vanilla syrup to the cup first, then milk, ice and espresso on top. <br> Drizzle with caramel sauce. <br> Top with whipped cream (optional) <br> Enjoy!</p>
+                    <p>Instructions: <br> Add vanilla syrup to the cup first, then milk, ice, and espresso on top. <br> Drizzle with caramel sauce. <br> Top with whipped cream (optional) <br> Enjoy!</p>
                     <a href="https://youtu.be/zH4ZqhxKjYc?si=iiaiUkwSkKxyMt8F" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
-                    <img src="../CoffeeVere/img/cm.jpg" alt="ICM photo">
+                    <img src="../CoffeeVere/img/cm.jpg" alt="A Cup of Iced Iaramel Macchiato">
                 </div>
             </div>
         </section>
