--- a/personalfave.html
+++ b/personalfave.html
@@ -140,7 +140,7 @@ nav img {
 .footer h4 {
     margin-bottom: 15px;
     margin-top: 10px;
-    font-weight: 600px;
+    font-weight: 600;
 }
 
 .footer p{
