--- a/recipe1.html
+++ b/recipe1.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="with=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>All You Need to Know About Coffee</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <style>
 *{
     margin: 0;
@@ -140,7 +140,7 @@ nav img {
 .footer h4 {
     margin-bottom: 15px;
     margin-top: 10px;
-    font-weight: 600px;
+    font-weight: 600;
 }
 
 .footer p{
@@ -152,7 +152,7 @@ nav img {
     <body>
         <section class="sub-header">
             <nav>
-                <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
+                <a href="index.html"><img src="../CoffeeVere/img/pls.png" alt="Logo photo"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
@@ -176,7 +176,7 @@ nav img {
                         <a href="https://youtu.be/UxwscVIZ8Qg?si=_rHIYwIr6fDmfg7R" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
-                    <img src="../CoffeeVere/img/la.jpg" alt="Latte photo">
+                    <img src="../CoffeeVere/img/la.jpg" alt="A cup of coffee with foam on top">
                 </div>
             </div>
         </section>
