--- a/recipe3.html
+++ b/recipe3.html
@@ -176,7 +176,7 @@ nav img {
                     <a href="https://youtu.be/aEHBmi1927g?si=e9GSpTeA9WsNKIic" class="hero-btn">Video Tutorial</a>
                </div>
                     <div class="r1-col">
-                    <img src="../CoffeeVere/img/mocha.jpg" alt="Mocha photo">
+                    <img src="../CoffeeVere/img/mocha.jpg" alt="Caffè mocha topped with foam">
                 </div>
             </div>
         </section>
