--- a/recipes.html
+++ b/recipes.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>All You Need to Know About Coffee</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
         <style>
 *{
     margin: 0;
@@ -180,7 +180,7 @@ nav img {
 .footer h4 {
     margin-bottom: 15px;
     margin-top: 10px;
-    font-weight: 600px;
+    font-weight: 600;
 }
 
 .footer p{
@@ -215,21 +215,21 @@ nav img {
             <div class="roww">
                 <div class="preview-col">
                     <a target="_blank" href="recipe1.html">
-                    <img src="../CoffeeVere/img/la.jpg">
+                    <img src="../CoffeeVere/img/la.jpg" alt="A cup of coffee with foam on top">
                     </a>
                     <h3>Caffè Latte</h3>
                     <p>Espresso and steamed milk come together in a latte to form a rich, smooth treat.</p>
                 </div>
                 <div class="preview-col">
                     <a target="_blank" href="recipe2.html">
-                    <img src="../CoffeeVere/img/espresso.jpg">
+                    <img src="../CoffeeVere/img/espresso.jpg" alt=" A small cup of espresso">
                     </a>
                     <h3>Espresso</h3>
                     <p>A small, intense shot of concentrated coffee provides a rich, bold taste.</p>
                 </div>
                 <div class="preview-col">
                     <a target="_blank" href="recipe3.html">
-                    <img src="../CoffeeVere/img/mocha.jpg">
+                    <img src="../CoffeeVere/img/mocha.jpg" alt="Caffè mocha topped with foam">
                     </a>
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
