--- a/recipes.html
+++ b/recipes.html
@@ -193,7 +193,7 @@ nav img {
     <body>
         <section class="sub-header">
             <nav>
-                <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
+                <a href="index.html"><img src="../CoffeeVere/img/pls.png" alt="Logo photo"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
@@ -234,7 +234,6 @@ nav img {
                     <h3>Caffè Mocha</h3>
                     <p>A creamy blend of coffee and cocoa topped with foam.</p>
                 </div>
-            </div>
             </div>
         </section>
 
