--- a/tips.html
+++ b/tips.html
@@ -135,7 +135,7 @@ nav img {
     <body>
         <section class="sub-header">
             <nav>
-                <a href="index.html"><img src="../CoffeeVere/img/pls.png"></a>
+                <a href="index.html"><img src="../CoffeeVere/img/pls.png" alt="Logo photo"></a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
